--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drupal-seeds",
   "version": "0.1.0",
-  "description": "Drupal seeding module + JavaScript API for momentary assets.",
+  "description": "Simple temporary seeds interface.",
   "main": "lib/index.js",
   "scripts": {
     "test": "gulp test"
